Fixed label icons being too big

--- a/services/web/src/semantic/elements/label.less
+++ b/services/web/src/semantic/elements/label.less
@@ -68,6 +68,8 @@ a.ui.label {
 .ui.label > .icon {
   margin: 0em @iconDistance 0em 0em;
   font-size: @deleteSize;
+  width: @relativeMedium;
+  height: @relativeMedium;
 }
 
 /* Detail */
@@ -92,6 +94,9 @@ a.ui.label {
   font-size: @deleteSize;
   opacity: @deleteOpacity;
   transition: @deleteTransition;
+  width: 12px;
+  height: 12px;
+  top: 0;
 }
 .ui.label > .delete.icon:hover {
   opacity: 1;
